// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SLinkHub > renders with multiple categories correctly 1`] = `
"<section>
  <div class="mx-auto">
    <div class="pt-12">
      <div><span class="inline-block py-4 text-3xl font-bold">Our Categories</span></div>
    </div>
    <div class="mt-5 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
      <div class="border-t"><a href="/linkhub/cat-1/" class="mt-3 flex font-medium">Category One</a></div>
      <div class="border-t"><a href="/linkhub/cat-2/" class="mt-3 flex font-medium">Category Two</a></div>
      <div class="border-t"><a href="/linkhub/cat-3/" class="mt-3 flex font-medium">Category Three</a></div>
    </div>
  </div>
</section>"
`;

exports[`SLinkHub > renders with no categories correctly 1`] = `
"<section>
  <div class="mx-auto">
    <div class="pt-12">
      <div><span class="inline-block py-4 text-3xl font-bold"></span></div>
    </div>
    <div class="mt-5 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
  </div>
</section>"
`;

exports[`SLinkHub > renders with one category correctly 1`] = `
"<section>
  <div class="mx-auto">
    <div class="pt-12">
      <div><span class="inline-block py-4 text-3xl font-bold">Featured Links</span></div>
    </div>
    <div class="mt-5 grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
      <div class="border-t"><a href="/linkhub/category-1/" class="mt-3 flex font-medium">Category 1</a></div>
    </div>
  </div>
</section>"
`;
